# catballchard

./: .dockerignore  .gitignore  Dockerfile  README.md  api.md  build-web.bat  build-web.sh  build-worker.bat  build-worker.sh  deploy.bat  flutter-get.bat  flutter-get.sh  flutter-run.bat  flutter-run.sh  schema.drawio  start-server-debug.bat  start-server.bat  start-server.sh  task-definition.json
.circleci/: config.yml
.github/workflows/: continuous-deloyment.yml
backend/: Cargo.toml  Rocket.toml
backend/src/: db.rs  guard.rs  main.rs
backend/src/api/: add.rs  all.rs  delete.rs  get.rs  hello.rs  login.rs  logout.rs  mod.rs  register.rs
backend/src/api/account/: login.rs  mod.rs  patch.rs  register.rs  username.rs
backend/src/api/card/: delete.rs  get.rs  mod.rs  patch.rs  post.rs
backend/src/api/section/: all.rs  delete.rs  get.rs  mod.rs  owned.rs  patch.rs  post.rs
frontend/: .gitignore  README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: card_container.dart  fetch.dart  flex_with_main_child.dart  future_builder.dart  grid.dart  image_to_data_url.dart  image_to_dataurl.dart  lifecycle.dart  main.dart  main_page.dart  name.dart  new_name.dart
frontend/lib/actions/: account.dart  card.dart  reducer.dart  section.dart
frontend/lib/app/: app.dart  (+4 more)
frontend/test/: widget_test.dart
frontend/web/: imageToDataUrl.js  index.html  jimp.js  manifest.json
frontend/web_worker/: README.md  main.js  package-lock.json
server/: Cargo.toml
(+32 files in other folders)
