[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json", "secrets"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "a062933" }
structopt = "0.3.25"
mongodb = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.17"
