[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "2ec5b3e0918c5ed634baeec3d1948f096f3c534d" }
structopt = "0.3.25"
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.17"
magic-crypt = "3.1.9"
